// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect.checkable uncheck remove by selector not treeCheckStrictly 1`] = `
<div>
  <div
    class="rc-tree-select rc-tree-select-multiple rc-tree-select-open rc-tree-select-show-search"
  >
    <div
      class="rc-tree-select-selector"
    >
      <span
        class="rc-tree-select-selection-item"
      >
        <span
          class="rc-tree-select-selection-item-content"
        >
          0
        </span>
        <span
          aria-hidden="true"
          class="rc-tree-select-selection-item-remove"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            class="rc-tree-select-selection-item-remove-icon"
          >
            ×
          </span>
        </span>
      </span>
      <span
        class="rc-tree-select-selection-item"
      >
        <span
          class="rc-tree-select-selection-item-content"
        >
          0-0
        </span>
        <span
          aria-hidden="true"
          class="rc-tree-select-selection-item-remove"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            class="rc-tree-select-selection-item-remove-icon"
          >
            ×
          </span>
        </span>
      </span>
      <span
        class="rc-tree-select-selection-item"
      >
        <span
          class="rc-tree-select-selection-item-content"
        >
          0-0-0
        </span>
        <span
          aria-hidden="true"
          class="rc-tree-select-selection-item-remove"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            class="rc-tree-select-selection-item-remove-icon"
          >
            ×
          </span>
        </span>
      </span>
      <span
        class="rc-tree-select-selection-search"
        style="width: 0px;"
      >
        <input
          aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
          aria-autocomplete="list"
          aria-controls="rc_select_TEST_OR_SSR_list"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="rc_select_TEST_OR_SSR_list"
          autocomplete="off"
          class="rc-tree-select-selection-search-input"
          id="rc_select_TEST_OR_SSR"
          role="combobox"
          value=""
        />
        <span
          aria-hidden="true"
          class="rc-tree-select-selection-search-mirror"
        >
           
        </span>
      </span>
    </div>
    <div>
      <div
        class="rc-tree-select-dropdown"
        style="opacity: 0; min-width: 0; width: 0px;"
      >
        <div>
          <div>
            <div
              class="rc-tree-select-tree"
            >
              <div
                role="tree"
              >
                <input
                  disabled=""
                  style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                  value=""
                />
              </div>
              <div
                class="rc-tree-select-tree-list"
                style="height: 200px;"
              >
                <div>
                  <div
                    class="rc-tree-select-tree-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked"
                    >
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                      />
                      <span
                        class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                        title="0"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          0
                        </span>
                      </span>
                    </div>
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked"
                    >
                      <span
                        aria-hidden="true"
                        class="rc-tree-select-tree-indent"
                      >
                        <span
                          class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                      />
                      <span
                        class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                        title="0-0"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          0-0
                        </span>
                      </span>
                    </div>
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked"
                    >
                      <span
                        aria-hidden="true"
                        class="rc-tree-select-tree-indent"
                      >
                        <span
                          class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                        />
                        <span
                          class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                      />
                      <span
                        class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                        title="0-0-0"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          0-0-0
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect.checkable uncheck remove by selector not treeCheckStrictly 2`] = `
<div>
  <div
    class="rc-tree-select rc-tree-select-multiple rc-tree-select-open rc-tree-select-show-search"
  >
    <div
      class="rc-tree-select-selector"
    >
      <span
        class="rc-tree-select-selection-search"
        style="width: 0px;"
      >
        <input
          aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
          aria-autocomplete="list"
          aria-controls="rc_select_TEST_OR_SSR_list"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="rc_select_TEST_OR_SSR_list"
          autocomplete="off"
          class="rc-tree-select-selection-search-input"
          id="rc_select_TEST_OR_SSR"
          role="combobox"
          value=""
        />
        <span
          aria-hidden="true"
          class="rc-tree-select-selection-search-mirror"
        >
           
        </span>
      </span>
      <span
        class="rc-tree-select-selection-placeholder"
      />
    </div>
    <div>
      <div
        class="rc-tree-select-dropdown"
        style="opacity: 0; min-width: 0; width: 0px;"
      >
        <div>
          <div>
            <div
              class="rc-tree-select-tree"
            >
              <div
                role="tree"
              >
                <input
                  disabled=""
                  style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                  value=""
                />
              </div>
              <div
                class="rc-tree-select-tree-list"
                style="height: 200px;"
              >
                <div>
                  <div
                    class="rc-tree-select-tree-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open"
                    >
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                      />
                      <span
                        class="rc-tree-select-tree-checkbox"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                        title="0"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          0
                        </span>
                      </span>
                    </div>
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="rc-tree-select-tree-indent"
                      >
                        <span
                          class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                      />
                      <span
                        class="rc-tree-select-tree-checkbox"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                        title="0-0"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          0-0
                        </span>
                      </span>
                    </div>
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="rc-tree-select-tree-indent"
                      >
                        <span
                          class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                        />
                        <span
                          class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                      />
                      <span
                        class="rc-tree-select-tree-checkbox"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                        title="0-0-0"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          0-0-0
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect.checkable uncheck remove by tree check 1`] = `
<div>
  <div
    class="rc-tree-select rc-tree-select-multiple rc-tree-select-open rc-tree-select-show-search"
  >
    <div
      class="rc-tree-select-selector"
    >
      <span
        class="rc-tree-select-selection-item"
      >
        <span
          class="rc-tree-select-selection-item-content"
        >
          0
        </span>
        <span
          aria-hidden="true"
          class="rc-tree-select-selection-item-remove"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            class="rc-tree-select-selection-item-remove-icon"
          >
            ×
          </span>
        </span>
      </span>
      <span
        class="rc-tree-select-selection-item"
      >
        <span
          class="rc-tree-select-selection-item-content"
        >
          0-0
        </span>
        <span
          aria-hidden="true"
          class="rc-tree-select-selection-item-remove"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            class="rc-tree-select-selection-item-remove-icon"
          >
            ×
          </span>
        </span>
      </span>
      <span
        class="rc-tree-select-selection-item"
      >
        <span
          class="rc-tree-select-selection-item-content"
        >
          0-0-0
        </span>
        <span
          aria-hidden="true"
          class="rc-tree-select-selection-item-remove"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            class="rc-tree-select-selection-item-remove-icon"
          >
            ×
          </span>
        </span>
      </span>
      <span
        class="rc-tree-select-selection-search"
        style="width: 0px;"
      >
        <input
          aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
          aria-autocomplete="list"
          aria-controls="rc_select_TEST_OR_SSR_list"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="rc_select_TEST_OR_SSR_list"
          autocomplete="off"
          class="rc-tree-select-selection-search-input"
          id="rc_select_TEST_OR_SSR"
          role="combobox"
          value="0"
        />
        <span
          aria-hidden="true"
          class="rc-tree-select-selection-search-mirror"
        >
          0 
        </span>
      </span>
    </div>
    <div>
      <div
        class="rc-tree-select-dropdown"
        style="opacity: 0; min-width: 0; width: 0px;"
      >
        <div>
          <div>
            <div
              class="rc-tree-select-tree"
            >
              <div
                role="tree"
              >
                <input
                  disabled=""
                  style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                  value=""
                />
              </div>
              <div
                class="rc-tree-select-tree-list"
                style="height: 200px;"
              >
                <div>
                  <div
                    class="rc-tree-select-tree-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked filter-node"
                    >
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                      />
                      <span
                        class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                        title="0"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          0
                        </span>
                      </span>
                    </div>
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked filter-node"
                    >
                      <span
                        aria-hidden="true"
                        class="rc-tree-select-tree-indent"
                      >
                        <span
                          class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                      />
                      <span
                        class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                        title="0-0"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          0-0
                        </span>
                      </span>
                    </div>
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked filter-node"
                    >
                      <span
                        aria-hidden="true"
                        class="rc-tree-select-tree-indent"
                      >
                        <span
                          class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                        />
                        <span
                          class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                      />
                      <span
                        class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                        title="0-0-0"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          0-0-0
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect.checkable uncheck remove by tree check 2`] = `
<div>
  <div
    class="rc-tree-select rc-tree-select-multiple rc-tree-select-open rc-tree-select-show-search"
  >
    <div
      class="rc-tree-select-selector"
    >
      <span
        class="rc-tree-select-selection-search"
        style="width: 0px;"
      >
        <input
          aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
          aria-autocomplete="list"
          aria-controls="rc_select_TEST_OR_SSR_list"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="rc_select_TEST_OR_SSR_list"
          autocomplete="off"
          class="rc-tree-select-selection-search-input"
          id="rc_select_TEST_OR_SSR"
          role="combobox"
          value="0"
        />
        <span
          aria-hidden="true"
          class="rc-tree-select-selection-search-mirror"
        >
          0 
        </span>
      </span>
    </div>
    <div>
      <div
        class="rc-tree-select-dropdown"
        style="opacity: 0; min-width: 0; width: 0px;"
      >
        <div>
          <div>
            <div
              class="rc-tree-select-tree"
            >
              <div
                role="tree"
              >
                <input
                  disabled=""
                  style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                  value=""
                />
              </div>
              <div
                class="rc-tree-select-tree-list"
                style="height: 200px;"
              >
                <div>
                  <div
                    class="rc-tree-select-tree-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open filter-node"
                    >
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                      />
                      <span
                        class="rc-tree-select-tree-checkbox"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                        title="0"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          0
                        </span>
                      </span>
                    </div>
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open filter-node"
                    >
                      <span
                        aria-hidden="true"
                        class="rc-tree-select-tree-indent"
                      >
                        <span
                          class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                      />
                      <span
                        class="rc-tree-select-tree-checkbox"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                        title="0-0"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          0-0
                        </span>
                      </span>
                    </div>
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open filter-node"
                    >
                      <span
                        aria-hidden="true"
                        class="rc-tree-select-tree-indent"
                      >
                        <span
                          class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                        />
                        <span
                          class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                      />
                      <span
                        class="rc-tree-select-tree-checkbox"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                        title="0-0-0"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          0-0-0
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
